@@ -4,6 +4,7 @@
 	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
 	* Fixed bug #11803: Fix locallang files
 	* Fixed bug #11801: Variable in the message "Page '' does not exist." will never be filled
+	* Fixed bug #11798: Table displaying the number of broken links must be styled
 
 2010-12-30  Christopher  <chrissitopher@gmx.de>
 
